# g910-gkey-macro-support

./: .ON_UPDATE_UPDATE  .gitignore  CONTRIBUTING.md  README.md  README.md.notgood  TODO.md  cli_entry_point.py  cli_layout_config_helpers.py  g910-gkey-macro-support  g910-gkeys-git.install  g910-gkeys.service  install  install_prebuild  installer-openrc.sh  installer.sh  launcher.py  layout_config_helpers.py  pyproject.toml  remove_and_reinstall.sh  requirements.txt  setup.py  uninstall  uninstall.sh
.github/ISSUE_TEMPLATE/: -feature--name-of-your-feature.md  -issue--name-of-your-issue.md  -misc--for-everything-else.md  -question--name-of-your-question.md  bug_report.md
config/: config.en.json  config.json  config.si.json
docs/: Changelog.md  Configuration-strict-user-environment.org  Configuration.md  Contributing.md  Detailed-installation.md  Home.md  Roadmap.md  Run-graphic-programs.md  Troubleshooting.md  Uninstalling.md  Upgrading.md  Why-can't-I-run-graphic-programs-by-default.md  alternative-user-configuration.org  hotkey_types.txt  supported_keys.txt
docs/ex_config/: ex_config.json
docs/multi-profiles/: config.json  m1.json  m2.json  m3.json  mr.json
etc/: 60-g910-gkeys.rules  config.json  g910-gkeys.service  uinput-g910-gkeys.conf
g910_gkeys/: g910_gkeys.py  layout_config_helpers.py
g910_gkeys/data_mappers/: bytearrays.py  supported_configs.py  (+3 more)
lib/: ;:q  PROJECT_INFO.py  g910_gkey_mapper.py  keyboard.py  usb_device.py
pkgbuild/: PKGBUILD  g910-gkeys-git.install
tests/: test_config.py  test_de.py  test_en.py  test_fr.py  test_si.py  test_usb.py
(+37 files in other folders)
